# mobile-external-libs

./: .gitignore  .gitmodules  README.md
androidcpufeatures/: CMakeLists.txt
bidi/: CMakeLists.txt  bidi.c
botan/: CMakeLists.txt  README.txt
botan/botan/: botan_all.h  botan_all_clang.cpp  botan_all_msvc.cpp
botan/hacks/: block_cipher.cpp  block_cipher.h
brotli/: CMakeLists.txt
cryptopp/: CMakeLists.txt  algparam.h  asn.cpp  channels.cpp  config.h  cpu.h  filters.cpp  ida.cpp  integer.cpp  oaep.cpp  pssr.cpp  vmac.cpp  zdeflate.cpp  zlibpp.cpp
date/: CMakeLists.txt
date/include/date/: date.h  tz.h
date/src/: tz.cpp  tz_data.h  tz_zone_data.h
freetype/: CMakeLists.txt
freetype/config/freetype/config/: ftoption.h  public-macros.h
harfbuzz/: CMakeLists.txt
harfbuzz/src/: hb-buffer-serialize.cc  hb-font-private.hh  hb-ot-tag.cc  hb-private.hh  hb-shape.cc  hb-utf-private.hh
libjpeg/: CMakeLists.txt
libjpeg/config/: jconfig.h  jconfigint.h
libpng/: CMakeLists.txt
libpng/config/: pnglibconf.h
libs-external/freetype/: CMakeLists.txt  freetype.sln
libs-external/freetype/include/: ftconfig.h
libs-external/freetype/include/config/: ftheader.h  ftoption.h
libs-external/freetype/src/base/: ftmac.c
libs-external/freetype/src/gzip/: zutil.h
libs-external/jpeg/: CMakeLists.txt  jquant2.c
libs-external/jpeg-turbo/: CMakeLists.txt  config.h  jccolor.c  jdcolor.c  jdmerge.c  jmemmgr.c  jquant2.c  tjutil.c  turbojpeg.c
libs-external/pion/: CMakeLists.txt
libs-external/pion/include/pion/: admin_rights.hpp  algorithm.hpp  config.hpp  config.hpp.win  logger.hpp
libs-external/pion/src/: http_message.cpp  http_parser.cpp.bak  http_types.cpp  tcp_server.cpp.bak
libs-external/rg_etc1/: CMakeLists.txt  rg_etc1.cpp
libs-external/sqlite/: CMakeLists.txt
libs-external/valhalla/: CMakeLists.txt
libs-external/valhalla/baldr-1.1.2/: .gitignore  Makefile.am
libs-external/valhalla/include/valhalla/: config.h
libs-external/valhalla/odin-1.1.2/proto/: tripdirections.pb.cc  trippath.pb.cc
libs-external/valhalla/source/baldr/: config.h  connectivity_map.cc  date_time_zonespec.h  datetime.cc  directededge.cc  graphfsreader.cc  graphfsreader.cpp  graphid.cc  graphreader.cc  graphtile.cc  graphtilefsstorage.cc  graphtileheader.cc  graphtilembtstorage.cc  graphtilezipstorage.cc  location.cc  nodeinfo.cc  sign.cc  tilehierarchy.cc  transitdeparture.cc  verbal_text_formatter.cc
libs-external/valhalla/source/loki/: search.cc
libs-external/valhalla/source/meili/: candidate_search.cc  geojson_reader.cc  map_matcher.cc  map_matcher_factory.cc  map_matching.cc  match_route.cc  routing.cc  service.cc  universal_cost.cc
libs-external/valhalla/source/midgard/: aabb2.cc  config.h  logging.cc  pointll.cc  util.cc
libs-external/valhalla/source/odin/: directions_options.pb.cc  directionsbuilder.cc  enhancedtrippath.cc  locales.h  maneuver.cc  maneuversbuilder.cc  narrativebuilder.cc  sign.cc  transitrouteinfo.cc  transitstop.cc  tripdirections.pb.cc  trippath.pb.cc  util.cc
libs-external/valhalla/source/proto/: directions_options.pb.h  tripdirections.pb.cc
libs-external/valhalla/source/sif/: autocost.cc  bicyclecost.cc  dynamiccost.cc  pedestriancost.cc  transitcost.cc  truckcost.cc
libs-external/valhalla/source/thor/: astar.cc  bidirectional_astar.cc  costmatrix.cc  isochrone.cc  multimodal.cc  optimizer.cc  trafficalgorithm.cc  trippathbuilder.cc
libwebp/: CMakeLists.txt
miniz/: CMakeLists.txt
miniz/config/: miniz_export.h
msdfgen/: CMakeLists.txt  msdfgen.h
msdfgen/core/: msdfgen.cpp
pion/: CMakeLists.txt
pion/include/pion/: error.hpp  scheduler.hpp  user.hpp
pion/include/pion/http/: basic_auth.hpp  plugin_server.hpp  request.hpp  request_reader.hpp  request_writer.hpp  response_reader.hpp  response_writer.hpp  server.hpp  writer.hpp
pion/include/pion/tcp/: server.hpp
pion/src/: admin_rights.cpp  algorithm.cpp  http_auth.cpp  http_basic_auth.cpp  http_cookie_auth.cpp  http_reader.cpp  http_server.cpp  scheduler.cpp  tcp_timer.cpp
protobuf/: CMakeLists.txt
protobuf/_config/: config.h
protobuf/src/google/protobuf/: repeated_field.h
pugixml/: CMakeLists.txt
pugixml/scripts/: CMakeLists.txt
pvrt/: CMakeLists.txt
rg_etc1/: CMakeLists.txt  rg_etc1.cpp  rg_etc1.h
sqlite/: CMakeLists.txt
sqlite3pp/: CMakeLists.txt  sqlite3pp.cpp  sqlite3pp.h  sqlite3ppext.cpp  sqlite3ppext.h
tess2/: CMakeLists.txt
tess2/include/: tesselator.h
tess2/source/: bucketalloc.c  geom.c  mesh.h  sweep.c  tess.c  tess.h
valhalla/: CMakeLists.txt  README.txt
valhalla/config/: robin_hood.h
valhalla/config/valhalla/odin/: locales.h
valhalla/include/valhalla/: config.h  filesystem.h
valhalla/include/valhalla/baldr/: directededge.h  graphconstants.h  graphreader.h  graphtile.h  graphtileheader.h  (+2 more)
valhalla/source/: worker.cc
valhalla/source/baldr/: graphreader.cc  graphtile.cc  graphtileheader.cc  graphtilembtstorage.cc  nodeinfo.cc  streetnames.cc  streetnames_factory.cc  streetnames_us.cc  transitroute.cc  verbal_text_formatter_factory.cc
valhalla/source/date/: tz.cc
valhalla/source/loki/: trace_route_action.cc  worker.cc
valhalla/source/meili/: geojson_reader.cc  map_matcher.cc
valhalla/source/midgard/: linesegment2.cc
valhalla/source/odin/: enhancedtrippath.cc  maneuver.cc  narrative_builder_factory.cc  transitrouteinfo.cc  transitstop.cc  worker.cc
valhalla/source/proto/: api.pb.cc  api.pb.h  directions.pb.cc  directions_options.pb.cc  options.pb.cc  options.pb.h  transit.pb.cc  transit_fetch.pb.cc  transit_fetch.pb.h  trip.pb.cc  trip.pb.h  tripcommon.pb.cc  tripcommon.pb.h  trippath.pb.cc  trippath.pb.h
valhalla/source/skadi/: sample.cc
valhalla/source/thor/: astar.cc  bidirectional_astar.cc  costmatrix.cc  formlocalpath.cc  isochrone.cc  map_matcher.cc  multimodal.cc  route_action.cc  route_matcher.cc  timedep_forward.cc  timedep_reverse.cc  timedistancematrix.cc  triplegbuilder.cc  worker.cc
valhalla/source/tyr/: locate_serializer.cc
zlib/: CMakeLists.txt  gzguts.h  gzlib.c  gzread.c  gzwrite.c  zconf.h  zutil.h
(+162 files in other folders)
