project(cryptopp)

file(GLOB cryptopp_SRC_FILES "cryptopp/*.cpp")
list(FILTER cryptopp_SRC_FILES EXCLUDE REGEX ".*(zlib|gzip|test[0-9]*|bench[0-9]*|validat[0-9]*)[.]cpp")

set(cryptopp_FLAGS "-DNO_OS_DEPENDENCE" "-DCRYPTOPP_DISABLE_ASM" "-DCRYPTOPP_DISABLE_SSE2" "-DCRYPTOPP_DISABLE_SSSE3" "-DCRYPTOPP_DISABLE_SSE4" "-DCRYPTOPP_DISABLE_AVX=1" "-DCRYPTOPP_DISABLE_AVX2=1" "-DCRYPTOPP_DISABLE_ARM_NEON" "-DCRYPTOPP_DISABLE_ARM_ASIMD")
if(IOS)
  set(cryptopp_FLAGS "${cryptopp_FLAGS}" "-Duncaught_exceptions=uncaught_exception")
elif(WIN32)
  set(cryptopp_FLAGS "${cryptopp_FLAGS}" "/wd4242" "/wd4244")
endif()

set(cryptopp_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}" PARENT_SCOPE)

if(SINGLE_LIBRARY)
  set(cryptopp_SRC_FILES ${cryptopp_SRC_FILES} PARENT_SCOPE)
  set(cryptopp_FLAGS ${cryptopp_FLAGS} PARENT_SCOPE)
  add_library(cryptopp INTERFACE)
else()
  add_compile_options(${cryptopp_FLAGS})
  include_directories("${PROJECT_SOURCE_DIR}")
  if(ANDROID)
    include_directories("${PROJECT_SOURCE_DIR}/../android/cpufeatures")
  endif()
  add_library(cryptopp OBJECT ${cryptopp_SRC_FILES})
endif()
