project(cryptopp)

file(GLOB cryptopp_SRC_FILES "cryptopp/*.cpp")
list(FILTER cryptopp_SRC_FILES EXCLUDE REGEX ".*(zlib|gzip|lsh[0-9]*|test[0-9]*|bench[0-9]*|validat[0-9]*)[.]cpp")

set(cryptopp_FLAGS "-DNO_OS_DEPENDENCE" "-DCRYPTOPP_DISABLE_ASM" "-DCRYPTOPP_DISABLE_SSE2" "-DCRYPTOPP_DISABLE_SSSE3" "-DCRYPTOPP_DISABLE_SSE4" "-DCRYPTOPP_DISABLE_AVX" "-DCRYPTOPP_DISABLE_AVX2" "-DCRYPTOPP_DISABLE_ARM_NEON" "-DCRYPTOPP_DISABLE_ARM_ASIMD")
if(WIN32)
  set(cryptopp_FLAGS ${cryptopp_FLAGS} "/wd4242" "/wd4244")
endif()

if(ANDROID)
  set(cryptopp_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/../androidcpufeatures/cpufeatures" PARENT_SCOPE)
else()
  set(cryptopp_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}" PARENT_SCOPE)
endif()

if(SINGLE_LIBRARY)
  set(cryptopp_SRC_FILES ${cryptopp_SRC_FILES} PARENT_SCOPE)
  set(cryptopp_FLAGS ${cryptopp_FLAGS} PARENT_SCOPE)
  add_library(cryptopp INTERFACE)
else()
  add_compile_options(${cryptopp_FLAGS})
  if(ANDROID)
    include_directories("${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/../androidcpufeatures/cpufeatures")
  else()
    include_directories("${PROJECT_SOURCE_DIR}")
  endif()
  add_library(cryptopp OBJECT ${cryptopp_SRC_FILES})
endif()
