project(valhalla)

file(GLOB valhalla_SRC_FILES "proto/valhalla/proto/*.pb.cc" "valhalla/src/worker.cc" "valhalla/src/proto_conversions.cc" "valhalla/src/baldr/*.cc" "valhalla/src/loki/*.cc" "valhalla/src/meili/*.cc" "valhalla/src/midgard/*.cc" "valhalla/src/odin/*.cc" "valhalla/src/sif/*.cc" "valhalla/src/skadi/*.cc" "valhalla/src/thor/*.cc" "valhalla/src/tyr/*.cc")
list(REMOVE_ITEM valhalla_SRC_FILES "${PROJECT_SOURCE_DIR}/valhalla/src/meili/valhalla_run_map_match.cc" "${PROJECT_SOURCE_DIR}/valhalla/src/meili/traffic_segment_matcher.cc")
list(REMOVE_ITEM valhalla_SRC_FILES "${PROJECT_SOURCE_DIR}/valhalla/src/thor/formlocalpath.cc" "${PROJECT_SOURCE_DIR}/valhalla/src/thor/expandfromnode.cc")
list(REMOVE_ITEM valhalla_SRC_FILES "${PROJECT_SOURCE_DIR}/valhalla/src/tyr/actor.cc")

set(valhalla_FLAGS "-DBOOST_SPIRIT_THREADSAFE" "-DBOOST_NO_CXX11_SCOPED_ENUMS" "-DRAPIDJSON_HAS_CXX11_RVALUE_REFS=1" "-DRAPIDJSON_HAS_STDSTRING=1" "-DRAPIDJSON_ENDIAN=RAPIDJSON_LITTLEENDIAN")
if(WIN32)
  set(valhalla_FLAGS ${valhalla_FLAGS} "-D_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING" "/wd4018" "/wd4101" "/wd4267" "/wd4305" "/wd4334" "/wd4804" "/wd4805")
elseif(ANDROID OR IOS)
  set(valhalla_FLAGS ${valhalla_FLAGS} "-Wno-narrowing" "-Wno-shorten-64-to-32")
endif()

set(valhalla_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/config" "${PROJECT_SOURCE_DIR}/config/valhalla" "${PROJECT_SOURCE_DIR}/proto" "${PROJECT_SOURCE_DIR}/proto/valhalla" "${PROJECT_SOURCE_DIR}/valhalla" "${PROJECT_SOURCE_DIR}/valhalla/valhalla" PARENT_SCOPE)

if(SINGLE_LIBRARY)
  set(valhalla_SRC_FILES ${valhalla_SRC_FILES} PARENT_SCOPE)
  set(valhalla_FLAGS ${valhalla_FLAGS} PARENT_SCOPE)
  add_library(valhalla INTERFACE)
else()
  add_compile_options(${valhalla_FLAGS})
  include_directories("${PROJECT_SOURCE_DIR}/config" "${PROJECT_SOURCE_DIR}/config/valhalla" "${PROJECT_SOURCE_DIR}/proto" "${PROJECT_SOURCE_DIR}/proto/valhalla" "${PROJECT_SOURCE_DIR}/valhalla" "${PROJECT_SOURCE_DIR}/valhalla/valhalla" "${PROJECT_SOURCE_DIR}/../protobuf/protobuf/src" "${PROJECT_SOURCE_DIR}/../rapidjson/include" "${PROJECT_SOURCE_DIR}/../date/include" "${PROJECT_SOURCE_DIR}/../sqlite" "${PROJECT_SOURCE_DIR}/../sqlite3pp")
  add_library(valhalla OBJECT ${valhalla_SRC_FILES})
endif()
